fix bug in footer icons not showing styles in firefox and safari

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -396,6 +396,7 @@ h3 {
 
     font-family: Montserrat, sans serif;
     font-size: larger;
+    text-decoration: none;
 
 }
 
@@ -439,7 +440,7 @@ h3 {
     list-style-type: none;
     display: inline;
     text-align: center;
-    color: #e88963;
+    color: #e88963 !important;
     text-shadow: 1px 1px 1px black;
     font-size: 3.5em;
 
@@ -452,10 +453,10 @@ h3 {
 
 }
 
-.footer-text a:visited,
-a {
+.footer-text a {
 
     color: black;
+    text-decoration: none;
 
 }
 
